for learing purpose

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <button onclick="checkGuess()">Guess</button>
         <p id="resultMessage"></p>
         <button onclick="resetGame()">Reset Game</button>
+        <h1>prabhat ranjan</h1>
     </div>
     <script src="script.js"></script>
 </body>
